fix layout issue in vertical form

--- a/packages/react/src/components/TryItNow/components/styles.module.css
+++ b/packages/react/src/components/TryItNow/components/styles.module.css
@@ -60,46 +60,24 @@
   height: var(--speakeasy-code-sample-height);
 }
 
-.results {
-  flex: 1;
-  display: flex;
-}
-
 /* Stack vertically on tablets and below */
 @media screen and (max-width: 996px) {
-  .outerLayout {
-    flex-direction: column;
-    max-height: none; /* Allow vertical growth when stacked */
-    --speakeasy-try-it-now-panel-width: 100%; /* Set variable for vertical layout */
-
-    border-radius: var(--speakeasy-code-border-radius);
-    max-height: 500px;
+  .editorContainer {
+    height: 250px;
   }
 
   .layout {
-    flex: 1;
-    min-height: 0;
-    display: flex;
-    flex-direction: column;
-    --speakeasy-code-sample-height: 600px;
+    display: grid;
+    grid-template-rows: 250px;
+    max-height: 800px;
+    height: unset;
+  }
+
+  .layout:has(> :nth-child(2)) {
+    grid-template-rows: 250px 200px;
   }
 
   .results {
     max-width: 100%;
-    max-height: 50%;
-  }
-
-  .editorWrapper {
-    flex: 1;
-    min-height: 0;
-    height: 100%;
-    max-height: 100%;
-  }
-
-  .layout,
-  .resultsSlot {
-    width: 100%; /* Ensure full width */
-    flex: 1;
-    max-height: 50%;
   }
 }
